--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +15,6 @@
     "three": "^0.171.0"
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0",
     "vite": "^6.0.1"
   }
 }
